Fix alignment navbar, Fix width slider images, Add DinNext font family, Add tab to news section, Fix indictors position in survey slider, change darker shadow in survey box, Fix alignment in copyright section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: "din-next-arabic";
+  src: url(../fonts/DinNextRegular.eot);
+  src: url(../fonts/DinNextRegular.eot) format("embedded-opentype"), url(../fonts/DinNextRegular.woff) format("woff"), url(../fonts/DinNextRegular.ttf) format("truetype"), url(../fonts/DinNextRegular.svg) format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "din-next-arabic-med";
+  src: url(../fonts/DinNextMedium.eot);
+  src: url(../fonts/DinNextMedium.eot) format("embedded-opentype"), url(../fonts/DinNextMedium.woff) format("woff"), url(../fonts/DinNextMedium.ttf) format("truetype"), url(../fonts/DinNextMedium.svg) format("svg");
+  font-weight: 500;
+  font-style: normal;
+}
 * {
   margin: 0;
   padding: 0;
@@ -16,17 +30,17 @@ body::-webkit-scrollbar {
 
 body {
   scrollbar-width: thin;
-  scrollbar-color: #1f9df1 #64d0ff;
+  scrollbar-color: #080 #e6e6e6;
 }
 
 body::-webkit-scrollbar-track {
-  background: #64d0ff;
+  background: #e6e6e6;
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #1f9df1;
+  background-color: #080;
   border-radius: 6px;
-  border: 3px solid #64d0ff;
+  border: 3px solid #e6e6e6;
 }
 
 .page .scroll-top {
@@ -155,6 +169,9 @@ body::-webkit-scrollbar-thumb {
 .page .page-inner .header .navbar {
   position: relative;
   z-index: 2;
+  direction: rtl;
+  float: left;
+  padding-left: 80px;
 }
 @media (max-width: 991.98px) {
   .page .page-inner .header .navbar {
@@ -162,6 +179,7 @@ body::-webkit-scrollbar-thumb {
     position: absolute;
     width: 100%;
     right: 0;
+    direction: ltr;
   }
   .page .page-inner .header .navbar .navbar-toggler {
     color: #fff;
@@ -193,15 +211,12 @@ body::-webkit-scrollbar-thumb {
   }
 }
 .page .page-inner .header .navbar .navbar__navbar-collapse .navbar__navbar-collapse__navbar-ul {
-  direction: rtl;
-  margin: 0 50px 0 30px;
   width: 100%;
   position: relative;
   z-index: 2;
 }
 @media (max-width: 991.98px) {
   .page .page-inner .header .navbar .navbar__navbar-collapse .navbar__navbar-collapse__navbar-ul {
-    margin: 0;
     text-align: right;
     width: 100%;
     background: #fff;
@@ -211,7 +226,6 @@ body::-webkit-scrollbar-thumb {
 }
 @media (max-width: 575.98px) {
   .page .page-inner .header .navbar .navbar__navbar-collapse .navbar__navbar-collapse__navbar-ul {
-    margin: 0;
     text-align: right;
     width: 100%;
     background: #fff;
@@ -220,7 +234,7 @@ body::-webkit-scrollbar-thumb {
   }
 }
 .page .page-inner .header .navbar .navbar__navbar-collapse .navbar__navbar-collapse__navbar-ul .navbar__navbar-collapse__navbar-ul--item {
-  padding: 4px 14px;
+  padding: 4px 8px;
 }
 @media (max-width: 1199.98px) {
   .page .page-inner .header .navbar .navbar__navbar-collapse .navbar__navbar-collapse__navbar-ul .navbar__navbar-collapse__navbar-ul--item {
@@ -230,9 +244,8 @@ body::-webkit-scrollbar-thumb {
 }
 .page .page-inner .header .navbar .navbar__navbar-collapse .navbar__navbar-collapse__navbar-ul .navbar__navbar-collapse__navbar-ul--item a {
   color: #fff;
-  font-family: "din-next-arabic-med";
+  font-family: "din-next-arabic";
   font-size: 18px;
-  font-weight: 500;
 }
 @media (max-width: 1199.98px) {
   .page .page-inner .header .navbar .navbar__navbar-collapse .navbar__navbar-collapse__navbar-ul .navbar__navbar-collapse__navbar-ul--item a {
@@ -280,6 +293,7 @@ body::-webkit-scrollbar-thumb {
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
 }
 @media (max-width: 1199.98px) {
   .page .page-inner .header .carousel .carousel__carousel-inner .carousel__carousel-inner--item img {
@@ -440,28 +454,36 @@ body::-webkit-scrollbar-thumb {
 .page .page-inner .news .news__title {
   width: 100%;
   height: 100%;
+  position: relative;
 }
 .page .page-inner .news .news__title ul {
-  color: #b6b6b6;
   font-weight: 800;
   font-family: "DinNext";
+  border-bottom: none;
 }
 .page .page-inner .news .news__title ul li {
   float: right;
   margin: 0 0 0 30px;
 }
-.page .page-inner .news .news__title ul li:hover {
+.page .page-inner .news .news__title ul li a {
+  color: #b6b6b6;
+}
+.page .page-inner .news .news__title ul li a:hover {
   color: #000;
   cursor: pointer;
+  text-decoration: unset;
 }
-.page .page-inner .news .news__title ul .active {
+.page .page-inner .news .news__title ul .active a {
   color: #000;
 }
-.page .page-inner .news .news__title a {
+.page .page-inner .news .news__title .news__title--see-more {
   float: left;
   color: #000;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
-.page .page-inner .news .news__title a img {
+.page .page-inner .news .news__title .news__title--see-more img {
   position: relative;
   right: 0px;
   top: 0px;
@@ -470,14 +492,14 @@ body::-webkit-scrollbar-thumb {
   border-radius: 30px;
   transition: all 0.5s ease-in-out;
 }
-.page .page-inner .news .news__title a span {
+.page .page-inner .news .news__title .news__title--see-more span {
   font-size: 14px;
   font-weight: 500;
 }
-.page .page-inner .news .news__title a:hover {
+.page .page-inner .news .news__title .news__title--see-more:hover {
   text-decoration: none;
 }
-.page .page-inner .news .news__title a:hover img {
+.page .page-inner .news .news__title .news__title--see-more:hover img {
   transform: translateX(-10px);
 }
 .page .page-inner .news .border-space {
@@ -490,9 +512,48 @@ body::-webkit-scrollbar-thumb {
   height: 4px;
   border-radius: 25px;
   background-color: #080;
+  position: relative;
 }
 @media (max-width: 575.98px) {
   .page .page-inner .news .border-space .border-space__seprated {
+    width: 20%;
+  }
+}
+@media (max-width: 900.98px) and (min-width: 650.98px) {
+  .page .page-inner .news .border-space .border-space__seprated {
+    width: 23%;
+  }
+}
+.page .page-inner .news .border-space .active {
+  right: 14%;
+  width: 14%;
+}
+@media (max-width: 1100px) and (min-width: 991px) {
+  .page .page-inner .news .border-space .active {
+    right: 20%;
+  }
+}
+@media (max-width: 850.98px) and (min-width: 650.98px) {
+  .page .page-inner .news .border-space .active {
+    right: 27%;
+    width: 30%;
+  }
+}
+@media (max-width: 575.98px) {
+  .page .page-inner .news .border-space .active {
+    right: 28%;
+    width: 30%;
+  }
+}
+@media (max-width: 500.98px) and (min-width: 400.98px) {
+  .page .page-inner .news .border-space .active {
+    right: 24%;
+    width: 30%;
+  }
+}
+@media (max-width: 330.98px) {
+  .page .page-inner .news .border-space .active {
+    right: 32%;
     width: 30%;
   }
 }
@@ -510,7 +571,6 @@ body::-webkit-scrollbar-thumb {
     font-size: 1.2rem;
   }
   .page .page-inner .news .news__title a {
-    position: absolute;
     top: 0px;
     left: 0px;
   }
@@ -520,6 +580,14 @@ body::-webkit-scrollbar-thumb {
   .page .page-inner .news .news__title a span {
     font-size: 10px;
     font-weight: 400;
+  }
+}
+.page .page-inner .tab-content .active {
+  display: inline-flex;
+}
+@media (max-width: 767.98px) {
+  .page .page-inner .tab-content .active {
+    display: block;
   }
 }
 .page .page-inner .news-box .news-box__card {
@@ -756,6 +824,7 @@ body::-webkit-scrollbar-thumb {
   width: 100%;
   height: 100%;
   position: relative;
+  direction: ltr;
 }
 @media (max-width: 991.98px) {
   .page .page-inner .survey .survey__rigth-box-survey {
@@ -907,7 +976,7 @@ body::-webkit-scrollbar-thumb {
   padding: 36px 16px;
   background-color: #fff;
   color: #000;
-  box-shadow: 0px 11px 10px #3333336e;
+  box-shadow: -0.5px 3px 13px 0 rgba(0, 0, 0, 0.11);
   text-align: right;
 }
 .page .page-inner .survey .survey__left-box-survey .survey__left-box-survey--p {
@@ -1009,8 +1078,10 @@ body::-webkit-scrollbar-thumb {
   }
 }
 .page .page-inner .copy-right .copy-right__left-side {
-  text-align: right;
   height: 100%;
+  float: left;
+  position: relative;
+  left: 4%;
 }
 .page .page-inner .copy-right .copy-right__left-side .copy-right__left-side__ul {
   height: 100%;
